test/scc/decl/semantic-errors/004.t
extern void foo();
extern void foo(int a);